@@ -84,7 +84,7 @@ void ShowHeader(CIccProfile *pIcc)
   else
     printf("Profile ID:       Profile ID not calculated.\n");
   printf("Attributes:       %s\n", Fmt.GetDeviceAttrName(pHdr->attributes));
-  printf("Cmm:              %s\n", icGetSig(buf, pHdr->cmmId));
+  printf("Cmm:              %s\n", Fmt.GetCmmSigName((icCmmSignature)(pHdr->cmmId)));
   printf("Creation Date:    %d/%d/%d  %02u:%02u:%02u\n",
                             pHdr->date.month, pHdr->date.day, pHdr->date.year,
                             pHdr->date.hours, pHdr->date.minutes, pHdr->date.seconds);
